--- a/static/styles/global.css
+++ b/static/styles/global.css
@@ -106,9 +106,15 @@ h5 {
 
 a {
 	text-decoration: none;
+  color: var(--primary-400);
 }
 
-ul {
+a:hover {
+	color: var(--primary-600);
+	font-weight: 500;
+}
+
+nav ul {
 	list-style-type: none;
 	padding: 0;
 }
